tdd-dsl/src/grammars/gen/PhysicalUnitsParser.java
// Generated from /home/sgu/IdeaProjects/antlr4-python/tdd-dsl/src/grammars/PhysicalUnits.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PhysicalUnitsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, ID=40, STRING=41, COMMENT=42, INT=43, NUM=44, DP=45, TDD_COMMENT=46, 
		NEWLINE=47, WS=48;
	public static final int
		RULE_unitSpec = 0, RULE_composedUnit = 1, RULE_basicUnit = 2, RULE_siUnit = 3, 
		RULE_customUnit = 4, RULE_unitPrefix = 5, RULE_siType = 6;
	private static String[] makeRuleNames() {
		return new String[] {
			"unitSpec", "composedUnit", "basicUnit", "siUnit", "customUnit", "unitPrefix", 
			"siType"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'*'", "'/'", "'**'", "'('", "')'", "'noP'", "'Q'", "'R'", "'Y'", 
			"'Z'", "'E'", "'P'", "'T'", "'G'", "'M'", "'k'", "'h'", "'da'", "'d'", 
			"'c'", "'m'", "'\\u03BC'", "'n'", "'p'", "'f'", "'a'", "'z'", "'y'", 
			"'r'", "'q'", "'s'", "'g'", "'A'", "'K'", "'mol'", "'cd'", "'Pa'", "'J'", 
			"'t'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "ID", "STRING", "COMMENT", "INT", "NUM", "DP", 
			"TDD_COMMENT", "NEWLINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PhysicalUnits.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PhysicalUnitsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnitSpecContext extends ParserRuleContext {
		public ComposedUnitContext composedUnit;
		public List<ComposedUnitContext> units = new ArrayList<ComposedUnitContext>();
		public List<ComposedUnitContext> composedUnit() {
			return getRuleContexts(ComposedUnitContext.class);
		}
		public ComposedUnitContext composedUnit(int i) {
			return getRuleContext(ComposedUnitContext.class,i);
		}
		public UnitSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unitSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).enterUnitSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).exitUnitSpec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhysicalUnitsVisitor ) return ((PhysicalUnitsVisitor<? extends T>)visitor).visitUnitSpec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnitSpecContext unitSpec() throws RecognitionException {
		UnitSpecContext _localctx = new UnitSpecContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_unitSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(14);
			((UnitSpecContext)_localctx).composedUnit = composedUnit();
			((UnitSpecContext)_localctx).units.add(((UnitSpecContext)_localctx).composedUnit);
			setState(19);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(15);
				match(T__0);
				setState(16);
				((UnitSpecContext)_localctx).composedUnit = composedUnit();
				((UnitSpecContext)_localctx).units.add(((UnitSpecContext)_localctx).composedUnit);
				}
				}
				setState(21);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComposedUnitContext extends ParserRuleContext {
		public BasicUnitContext numerator;
		public BasicUnitContext denominator;
		public Token exponent;
		public BasicUnitContext unit;
		public List<BasicUnitContext> basicUnit() {
			return getRuleContexts(BasicUnitContext.class);
		}
		public BasicUnitContext basicUnit(int i) {
			return getRuleContext(BasicUnitContext.class,i);
		}
		public TerminalNode INT() { return getToken(PhysicalUnitsParser.INT, 0); }
		public ComposedUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_composedUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).enterComposedUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).exitComposedUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhysicalUnitsVisitor ) return ((PhysicalUnitsVisitor<? extends T>)visitor).visitComposedUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComposedUnitContext composedUnit() throws RecognitionException {
		ComposedUnitContext _localctx = new ComposedUnitContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_composedUnit);
		try {
			setState(30);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(22);
				((ComposedUnitContext)_localctx).numerator = basicUnit();
				setState(27);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__1:
					{
					{
					setState(23);
					match(T__1);
					setState(24);
					((ComposedUnitContext)_localctx).denominator = basicUnit();
					}
					}
					break;
				case T__2:
					{
					{
					setState(25);
					match(T__2);
					setState(26);
					((ComposedUnitContext)_localctx).exponent = match(INT);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(29);
				((ComposedUnitContext)_localctx).unit = basicUnit();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BasicUnitContext extends ParserRuleContext {
		public BasicUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basicUnit; }
	 
		public BasicUnitContext() { }
		public void copyFrom(BasicUnitContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CustomUnitTypeContext extends BasicUnitContext {
		public CustomUnitContext type;
		public CustomUnitContext customUnit() {
			return getRuleContext(CustomUnitContext.class,0);
		}
		public CustomUnitTypeContext(BasicUnitContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).enterCustomUnitType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).exitCustomUnitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhysicalUnitsVisitor ) return ((PhysicalUnitsVisitor<? extends T>)visitor).visitCustomUnitType(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SiUnitTypeContext extends BasicUnitContext {
		public SiUnitContext type;
		public SiUnitContext siUnit() {
			return getRuleContext(SiUnitContext.class,0);
		}
		public SiUnitTypeContext(BasicUnitContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).enterSiUnitType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).exitSiUnitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhysicalUnitsVisitor ) return ((PhysicalUnitsVisitor<? extends T>)visitor).visitSiUnitType(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ComposedUnitTypeContext extends BasicUnitContext {
		public UnitSpecContext type;
		public UnitSpecContext unitSpec() {
			return getRuleContext(UnitSpecContext.class,0);
		}
		public ComposedUnitTypeContext(BasicUnitContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).enterComposedUnitType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).exitComposedUnitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhysicalUnitsVisitor ) return ((PhysicalUnitsVisitor<? extends T>)visitor).visitComposedUnitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BasicUnitContext basicUnit() throws RecognitionException {
		BasicUnitContext _localctx = new BasicUnitContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_basicUnit);
		try {
			setState(38);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
			case T__6:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case T__17:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
			case T__22:
			case T__23:
			case T__24:
			case T__25:
			case T__26:
			case T__27:
			case T__28:
			case T__29:
			case T__30:
			case T__31:
			case T__32:
			case T__33:
			case T__34:
			case T__35:
			case T__36:
			case T__37:
			case T__38:
				_localctx = new SiUnitTypeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(32);
				((SiUnitTypeContext)_localctx).type = siUnit();
				}
				break;
			case STRING:
				_localctx = new CustomUnitTypeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(33);
				((CustomUnitTypeContext)_localctx).type = customUnit();
				}
				break;
			case T__3:
				_localctx = new ComposedUnitTypeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(34);
				match(T__3);
				setState(35);
				((ComposedUnitTypeContext)_localctx).type = unitSpec();
				setState(36);
				match(T__4);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SiUnitContext extends ParserRuleContext {
		public UnitPrefixContext prefix;
		public SiTypeContext type;
		public SiTypeContext siType() {
			return getRuleContext(SiTypeContext.class,0);
		}
		public UnitPrefixContext unitPrefix() {
			return getRuleContext(UnitPrefixContext.class,0);
		}
		public SiUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_siUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).enterSiUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).exitSiUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhysicalUnitsVisitor ) return ((PhysicalUnitsVisitor<? extends T>)visitor).visitSiUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SiUnitContext siUnit() throws RecognitionException {
		SiUnitContext _localctx = new SiUnitContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_siUnit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(40);
				((SiUnitContext)_localctx).prefix = unitPrefix();
				}
				break;
			}
			setState(43);
			((SiUnitContext)_localctx).type = siType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CustomUnitContext extends ParserRuleContext {
		public Token name;
		public TerminalNode STRING() { return getToken(PhysicalUnitsParser.STRING, 0); }
		public CustomUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_customUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).enterCustomUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).exitCustomUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhysicalUnitsVisitor ) return ((PhysicalUnitsVisitor<? extends T>)visitor).visitCustomUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CustomUnitContext customUnit() throws RecognitionException {
		CustomUnitContext _localctx = new CustomUnitContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_customUnit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			((CustomUnitContext)_localctx).name = match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnitPrefixContext extends ParserRuleContext {
		public UnitPrefixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unitPrefix; }
	 
		public UnitPrefixContext() { }
		public void copyFrom(UnitPrefixContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MegaContext extends UnitPrefixContext {
		public Token value;
		public MegaContext(UnitPrefixContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).enterMega(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).exitMega(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhysicalUnitsVisitor ) return ((PhysicalUnitsVisitor<? extends T>)visitor).visitMega(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AttoContext extends UnitPrefixContext {
		public Token value;
		public AttoContext(UnitPrefixContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).enterAtto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).exitAtto(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhysicalUnitsVisitor ) return ((PhysicalUnitsVisitor<? extends T>)visitor).visitAtto(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FemtoContext extends UnitPrefixContext {
		public Token value;
		public FemtoContext(UnitPrefixContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).enterFemto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).exitFemto(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhysicalUnitsVisitor ) return ((PhysicalUnitsVisitor<? extends T>)visitor).visitFemto(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ZeptoContext extends UnitPrefixContext {
		public Token value;
		public ZeptoContext(UnitPrefixContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).enterZepto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).exitZepto(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhysicalUnitsVisitor ) return ((PhysicalUnitsVisitor<? extends T>)visitor).visitZepto(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NanoContext extends UnitPrefixContext {
		public Token value;
		public NanoContext(UnitPrefixContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).enterNano(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).exitNano(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhysicalUnitsVisitor ) return ((PhysicalUnitsVisitor<? extends T>)visitor).visitNano(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DeciContext extends UnitPrefixContext {
		public Token value;
		public DeciContext(UnitPrefixContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).enterDeci(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).exitDeci(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhysicalUnitsVisitor ) return ((PhysicalUnitsVisitor<? extends T>)visitor).visitDeci(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GigaContext extends UnitPrefixContext {
		public Token value;
		public GigaContext(UnitPrefixContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).enterGiga(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).exitGiga(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhysicalUnitsVisitor ) return ((PhysicalUnitsVisitor<? extends T>)visitor).visitGiga(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class QuectoContext extends UnitPrefixContext {
		public Token value;
		public QuectoContext(UnitPrefixContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).enterQuecto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).exitQuecto(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhysicalUnitsVisitor ) return ((PhysicalUnitsVisitor<? extends T>)visitor).visitQuecto(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExaContext extends UnitPrefixContext {
		public Token value;
		public ExaContext(UnitPrefixContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).enterExa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).exitExa(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhysicalUnitsVisitor ) return ((PhysicalUnitsVisitor<? extends T>)visitor).visitExa(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PicoContext extends UnitPrefixContext {
		public Token value;
		public PicoContext(UnitPrefixContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).enterPico(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).exitPico(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhysicalUnitsVisitor ) return ((PhysicalUnitsVisitor<? extends T>)visitor).visitPico(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class KiloContext extends UnitPrefixContext {
		public Token value;
		public KiloContext(UnitPrefixContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).enterKilo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).exitKilo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhysicalUnitsVisitor ) return ((PhysicalUnitsVisitor<? extends T>)visitor).visitKilo(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class YoctoContext extends UnitPrefixContext {
		public Token value;
		public YoctoContext(UnitPrefixContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).enterYocto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).exitYocto(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhysicalUnitsVisitor ) return ((PhysicalUnitsVisitor<? extends T>)visitor).visitYocto(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class YottaContext extends UnitPrefixContext {
		public Token value;
		public YottaContext(UnitPrefixContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).enterYotta(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).exitYotta(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhysicalUnitsVisitor ) return ((PhysicalUnitsVisitor<? extends T>)visitor).visitYotta(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PetaContext extends UnitPrefixContext {
		public Token value;
		public PetaContext(UnitPrefixContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).enterPeta(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).exitPeta(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhysicalUnitsVisitor ) return ((PhysicalUnitsVisitor<? extends T>)visitor).visitPeta(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TeraContext extends UnitPrefixContext {
		public Token value;
		public TeraContext(UnitPrefixContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).enterTera(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).exitTera(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhysicalUnitsVisitor ) return ((PhysicalUnitsVisitor<? extends T>)visitor).visitTera(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CentiContext extends UnitPrefixContext {
		public Token value;
		public CentiContext(UnitPrefixContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicalUnitsListener ) ((PhysicalUnitsListener)listener).enterCenti(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
